--- a/lab1-Skeleton/README
+++ b/lab1-Skeleton/README
@@ -12,4 +12,4 @@ The complete command placed in each node is generated with a call to the makeCom
 Tokens are generated using ReadNextToken helper function which continues through the stream until it finds a delimiter such as ";", " ", "\n", "(" etc. ReadNextToken then returns both the token and the delimiters. 
 
 Limitations:
-The current implementation fails to raise errors for some of the ill-formed commands. To handle this a stack was implemented to track which commands occurred. By popping old commands when the next command in a sequence occurred and checking that closing commands occur (such as done, fi) the stack would ensure that ill-formed commands are detected. However the stack implementation currently breaks other components and is therefore left out of this submission.
+The current implementation fails to raise errors for some of the ill-formed commands. To handle this a stack is implemented to track which commands occurred. By popping old commands when the next command in a sequence occurred and checking that closing commands occur (such as done, fi) the stack would ensure that ill-formed commands are detected. The stack code needs to be enchanced to handle the cases for example - if then a; fi. It fails to see that between if and then, there was no command.
