--- a/lab1-Skeleton/README
+++ b/lab1-Skeleton/README
@@ -1,8 +1,53 @@
-CS 111 Lab 1A/B
+CS 111 Lab 1C
 
 
 Robert Abbott 004432123
 Mohammed Junaid Ahmed 104-293-008
+
+Lab 1C Implementation Details:
+There are two methods that enable logging. clock_gettime, which collects the performance information of a command, and log_command
+which then writes that information to the log file. Both clock_gettime and log_command are called at the end of each command execution.
+A locking mechanism is also implemented which makes it so that when log_command is called by a process that call to log_command acquires
+the lock an is therefore the only process allowed to write to the log file.
+
+Questions:
+1) The first column of the log file should be in non-decreasing order. The only way it would not be non-decreasing is if a process exited
+before another, but somehow the later exiting process acquired the log file lock first. 
+
+2) Yes, the real cpu time of the command can be lesser than the sum of the CPU time spent in the user space and the kernel
+space. In case of multiple cores and multi threaded programs, the user cpu time and kernel cpu time reported will much greater
+because due to multiple cores, multiple threads can run in parallel. Thus, bringing down the real cpu time.
+
+3) Yes. It is possible when the clock is changed to older value while the command/program is in its middle of execution.
+
+4) We used the script with a set of commands which we used as input and collected the output of it. We manually matched the
+logs printed in the log file.
+
+echo a > /tmp/a
+echo b > /tmp/b
+cat /tmp/a; cat /tmp/b
+cat /tmp/a | grep a
+if cat /tmp/a
+then
+    cat /tmp/a
+else
+    cat /tmp/b
+fi
+(cat /tmp/a | grep a)
+echo c > /tmp/c
+while cat /tmp/c
+do
+    rm /tmp/c;
+done
+until cat /tmp/c
+do
+    echo c > /tmp/c
+done
+cat /tmp/a; cat /tmp/b
+cat /tmp/a; cat /tmp/b
+rm /tmp/a
+rm /tmp/b
+
 
 Lab 1A Implementation Details:
 The main method in our implementation is make_command_stream. This creates a linked list of command nodes. Each nodes is a complete command.
@@ -28,21 +73,3 @@ the proper unix command.
 
 There are no known limitations to this implementation of lab 1B
 
-Lab 1C Implementation Details:
-There are two methods that enable logging. clock_gettime, which collects the performance information of a command, and log_command
-which then writes that information to the log file. Both clock_gettime and log_command are called at the end of each command execution.
-A locking mechanism is also implemented which makes it so that when log_command is called by a process that call to log_command acquires
-the lock an is therefore the only process allowed to write to the log file.
-
-Questions:
-1) The first column of the log file should be in non-decreasing order. The only way it would not be non-decreasing is if a process exited
-before another, but somehow the later exiting process acquired the log file lock first. 
-
-2) No. The total execution time of the command should not be greater than the sum of the CPU time spent in the user space and the kernel
-space. Since the total execution time will include bot the time spent in user and kernel space as well as any overhead not included in 
-the other two values.
-
-3) If they are calculated correctly columns two, three and four can never be negative since you obviously cannot spend negative time in
-on the CPU.
-
-4) 
